Back-end 50% done

--- a/styles/style.css
+++ b/styles/style.css
@@ -9,9 +9,8 @@ body{
     background-color: #5D5FEF;
 }
 
-.nav-item :hover{
-    color: #5D5FEF;
-    text-decoration: underline;
+.category-list :hover{
+    color: #5D5FEF !important;
 }
 
 .menu-active{
@@ -51,5 +50,19 @@ body{
 .active{
     color: white !important;
     background-color: #5D5FEF !important;
+}
+
+.tiny-image{
+    height: 48px;
+    width: 40px;
+}
+
+.text-box{
+    overflow: hidden;
+}
+
+.short-para{
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
